*) update jvm option for gc