@@ -28,15 +28,6 @@ categories:
 ## 安装配置
 > [Official site](https://www.oracle.com/technetwork/java/javase/downloads/index.html)
 
-
-> [ZGC](https://www.oracle.com/technetwork/java/javase/11-relnote-issues-5012449.html#JDK-8197831)
-
-通过 JVM 参数启用 ZGC
-```
-    -XX:+UnlockExperimentalVMOptions
-    -XX:+UseZGC
-```
-
 ### Linux
 ```sh
     JAVA_HOME=/path/to/java11
@@ -47,6 +38,9 @@ categories:
 ## 新特性
 > [Official: migrate guide](https://docs.oracle.com/en/java/javase/11/migrate/index.html)  
 > [JDK 11 Release Notes](https://www.oracle.com/technetwork/java/javase/11-relnote-issues-5012449.html#JDK-8197831)
+
+### ZGC
+> [ZGC](/Java/AdvancedLearning/JVM.md#ZGC)  
 
 *******************************
 > [参考博客: Java 11 Tutorial](https://winterbe.com/posts/2018/09/24/java-11-tutorial/)
